Move classes out to main project after TDD

--- a/Game-of-life/Game-of-life-tests/Game-of-life-tests.csproj
+++ b/Game-of-life/Game-of-life-tests/Game-of-life-tests.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CellTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Game-of-life\Game-of-life.csproj">
+      <Project>{7F5A6145-5594-4253-8272-D9F45F98DBA7}</Project>
+      <Name>Game-of-life</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
