--- a/Game-of-life/Game-of-life-tests/Game-of-life-tests.csproj
+++ b/Game-of-life/Game-of-life-tests/Game-of-life-tests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CellTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorldTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
